--- a/trustbridge-frontend/index.html
+++ b/trustbridge-frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/trustbridge-icon.svg" />
+  <link rel="icon" type="image/png" href="/images/tbfav.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TrustBridge Africa - Universal Asset Protocol</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
